kubernetes/services/ingress-sp.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.gcp.kubernetes.io/pre-shared-cert: mcrt-87386ba5-be36-4804-977c-b0f8e1dbff95
    ingress.kubernetes.io/backends: '{"k8s1-199201be-default-service-sp-80-b40a1f5a":"HEALTHY"}'
    ingress.kubernetes.io/https-forwarding-rule: k8s2-fs-ak94kp8v-default-ingress-sp-3a02ig01
    ingress.kubernetes.io/https-target-proxy: k8s2-ts-ak94kp8v-default-ingress-sp-3a02ig01
    ingress.kubernetes.io/ssl-cert: mcrt-87386ba5-be36-4804-977c-b0f8e1dbff95
    ingress.kubernetes.io/url-map: k8s2-um-ak94kp8v-default-ingress-sp-3a02ig01
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1beta1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.global-static-ip-name":"address-sp","networking.gke.io/managed-certificates":"certificate-sp"},"name":"ingress-sp","namespace":"default"},"spec":{"backend":{"serviceName":"service-sp","servicePort":443}}}
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: address-sp
    networking.gke.io/managed-certificates: certificate-sp
  creationTimestamp: "2020-12-06T00:51:35Z"
  finalizers:
  - networking.gke.io/ingress-finalizer-V2
  generation: 17
  managedFields:
  - apiVersion: networking.k8s.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:ingress.gcp.kubernetes.io/pre-shared-cert: {}
    manager: managed-certificate-controller
    operation: Update
    time: "2020-12-06T00:51:36Z"
  - apiVersion: networking.k8s.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:kubernetes.io/ingress.global-static-ip-name: {}
          f:networking.gke.io/managed-certificates: {}
    manager: kubectl
    operation: Update
    time: "2020-12-06T04:40:52Z"
  - apiVersion: extensions/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:kubernetes.io/ingress.allow-http: {}
      f:spec:
        f:backend:
          .: {}
          f:serviceName: {}
          f:servicePort: {}
    manager: GoogleCloudConsole
    operation: Update
    time: "2021-07-05T03:48:08Z"
  - apiVersion: networking.k8s.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:ingress.kubernetes.io/https-forwarding-rule: {}
          f:ingress.kubernetes.io/https-target-proxy: {}
          f:ingress.kubernetes.io/ssl-cert: {}
          f:ingress.kubernetes.io/url-map: {}
        f:finalizers:
          .: {}
          v:"networking.gke.io/ingress-finalizer-V2": {}
      f:status:
        f:loadBalancer:
          f:ingress: {}
    manager: glbc
    operation: Update
    time: "2021-07-05T07:18:49Z"
  - apiVersion: networking.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:ingress.kubernetes.io/backends: {}
    manager: glbc
    operation: Update
    time: "2021-09-19T08:24:40Z"
  name: ingress-sp
  namespace: default
  resourceVersion: "166626311"
  uid: d6fa3ee8-31fe-47dc-8496-6bff7c2a6da7
spec:
  backend:
    serviceName: service-sp
    servicePort: 80
status:
  loadBalancer:
    ingress:
    - ip: 34.107.129.35
