kubernetes/services/service-sp.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    cloud.google.com/neg-status: '{"network_endpoint_groups":{"80":"k8s1-199201be-default-service-sp-80-b40a1f5a"},"zones":["us-central1-c"]}'
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"service-sp","namespace":"default"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":443}],"selector":{"app":"platform"},"type":"NodePort"}}
  creationTimestamp: "2020-12-06T00:50:07Z"
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
      f:spec:
        f:externalTrafficPolicy: {}
        f:ports:
          .: {}
          k:{"port":80,"protocol":"TCP"}:
            .: {}
            f:port: {}
            f:protocol: {}
        f:selector: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: kubectl
    operation: Update
    time: "2020-12-06T04:40:44Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        f:ports:
          k:{"port":80,"protocol":"TCP"}:
            f:targetPort: {}
        f:selector:
          f:app: {}
    manager: GoogleCloudConsole
    operation: Update
    time: "2021-01-17T06:32:00Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:cloud.google.com/neg-status: {}
    manager: glbc
    operation: Update
    time: "2021-07-05T07:18:18Z"
  name: service-sp
  namespace: default
  resourceVersion: "166622933"
  uid: 646e438c-119a-4cbe-81f1-3f2d0c8772b3
spec:
  clusterIP: 10.4.13.40
  clusterIPs:
  - 10.4.13.40
  externalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 32260
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: sp-client-deployment
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
