kubernetes/services/sp-rest-deployment-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
  creationTimestamp: "2021-09-19T07:06:10Z"
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    app: sp-rest-deployment
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:externalTrafficPolicy: {}
        f:ports:
          .: {}
          k:{"port":80,"protocol":"TCP"}:
            .: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: GoogleCloudConsole
    operation: Update
    time: "2021-09-19T07:06:10Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:finalizers:
          .: {}
          v:"service.kubernetes.io/load-balancer-cleanup": {}
      f:status:
        f:loadBalancer:
          f:ingress: {}
    manager: kube-controller-manager
    operation: Update
    time: "2021-09-19T07:06:44Z"
  name: sp-rest-deployment-service
  namespace: default
  resourceVersion: "166591543"
  uid: 4f4a2b7a-3a83-4d8a-94b1-7030a2cceff3
spec:
  clusterIP: 10.4.15.24
  clusterIPs:
  - 10.4.15.24
  externalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 32482
    port: 80
    protocol: TCP
    targetPort: 5001
  selector:
    app: sp-rest-deployment
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 35.188.198.28
